Implementação do exercício 3, ListView com modelo de dados.

--- a/ListView/ListViewExercicios/Exercicio03.xaml
+++ b/ListView/ListViewExercicios/Exercicio03.xaml
@@ -5,7 +5,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="ListViewExercicios.Exercicio03">
-    
-    
+
+    <ListView x:Name="listview">
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <ImageCell Text="{Binding Nome}"
+                           Detail="{Binding Preco}"
+                           ImageSource="{Binding Imagem}"/>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
     
 </ContentPage>
